fixed overflow

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@ body{
     padding: 0;
     display: flex;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .image-bar{
@@ -73,7 +74,7 @@ a:link{
 }
 
 .form-container{
-    background-color: whitesmoke;
+    background-color: whitesmokegi;
     font-size: 22px;
     font-family: 'Times New Roman', Times, serif;
     font-weight: 900;
